refactor: reuse getCourseEntityById function